@@ -15,6 +15,8 @@ This function creat a temporary directory, download the dataset by
 download.file, then read the dataset by foreign:::read.dta. The
 tmporary file will be cleaned when on exit.
 
+The newest version of \code{read.dta} can read dta file from the 
+Internet, which makes this function unncessary since R 2.9.1.
 }
 \value{
   A data frame.
